[gd_scene load_steps=12 format=3 uid="uid://dpw4gqwmpfe5e"]

[ext_resource type="Script" uid="uid://cau6j0o0julfq" path="res://addons/godot_state_charts/state_chart.gd" id="1_0ag1n"]
[ext_resource type="Script" uid="uid://cl75pkl5l8lau" path="res://BouncingBalls/sc_semantics.gd" id="1_7xljh"]
[ext_resource type="Script" uid="uid://dtlmgewt76wtf" path="res://addons/godot_state_charts/parallel_state.gd" id="2_7xljh"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="2_umojb"]
[ext_resource type="Script" uid="uid://bou0yn8lpwcuh" path="res://addons/godot_state_charts/compound_state.gd" id="3_umojb"]
[ext_resource type="Script" uid="uid://dyiggrr357tov" path="res://addons/godot_state_charts/atomic_state.gd" id="4_1iswr"]
[ext_resource type="Script" uid="uid://m8bym6l05tkl" path="res://addons/godot_state_charts/transition.gd" id="5_ploh2"]
[ext_resource type="Script" uid="uid://cgpbecy3dmigh" path="res://addons/godot_state_charts/expression_guard.gd" id="7_7xljh"]

[sub_resource type="Resource" id="Resource_umojb"]
script = ExtResource("7_7xljh")
expression = "x == 1"
metadata/_custom_type_script = "uid://cgpbecy3dmigh"

[sub_resource type="Resource" id="Resource_1iswr"]
script = ExtResource("7_7xljh")
expression = "x == 0"
metadata/_custom_type_script = "uid://cgpbecy3dmigh"

[sub_resource type="Resource" id="Resource_7xljh"]
script = ExtResource("7_7xljh")
expression = "x == 1"
metadata/_custom_type_script = "uid://cgpbecy3dmigh"

[node name="SC_semantics" type="Node2D"]
script = ExtResource("1_7xljh")

[node name="StateChartDebugger" parent="." instance=ExtResource("2_umojb")]
offset_left = -437.0
offset_top = -473.0
offset_right = 441.0
offset_bottom = 467.0
initial_node_to_watch = NodePath("../StateChart")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("1_0ag1n")
metadata/_custom_type_script = "uid://cau6j0o0julfq"

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("2_7xljh")
metadata/_custom_type_script = "uid://dtlmgewt76wtf"

[node name="BigStepMaximality" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("3_umojb")
initial_state = NodePath("Initial")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Initial" type="Node" parent="StateChart/ParallelState/BigStepMaximality"]
script = ExtResource("4_1iswr")

[node name="Transition" type="Node" parent="StateChart/ParallelState/BigStepMaximality/Initial"]
script = ExtResource("5_ploh2")
to = NodePath("../../TakeOne")
delay_in_seconds = "0.0"

[node name="TakeOne" type="Node" parent="StateChart/ParallelState/BigStepMaximality"]
script = ExtResource("4_1iswr")

[node name="Transition" type="Node" parent="StateChart/ParallelState/BigStepMaximality/TakeOne"]
script = ExtResource("5_ploh2")
to = NodePath("../../TakeMany")
delay_in_seconds = "0.0"

[node name="TakeMany" type="Node" parent="StateChart/ParallelState/BigStepMaximality"]
script = ExtResource("4_1iswr")

[node name="InputEventLifeline" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("3_umojb")
initial_state = NodePath("FirstSmallStep")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="FirstSmallStep" type="Node" parent="StateChart/ParallelState/InputEventLifeline"]
script = ExtResource("4_1iswr")

[node name="Transition" type="Node" parent="StateChart/ParallelState/InputEventLifeline/FirstSmallStep"]
script = ExtResource("5_ploh2")
to = NodePath("../../AfterSmallStep")
event = &"input0"
delay_in_seconds = "0.0"

[node name="AfterSmallStep" type="Node" parent="StateChart/ParallelState/InputEventLifeline"]
script = ExtResource("4_1iswr")

[node name="Transition" type="Node" parent="StateChart/ParallelState/InputEventLifeline/AfterSmallStep"]
script = ExtResource("5_ploh2")
to = NodePath("../../Whole")
event = &"input0"
delay_in_seconds = "0.0"

[node name="Transition2" type="Node" parent="StateChart/ParallelState/InputEventLifeline/AfterSmallStep"]
script = ExtResource("5_ploh2")
to = NodePath("../../FirstComboStep")
delay_in_seconds = "0.0"

[node name="Whole" type="Node" parent="StateChart/ParallelState/InputEventLifeline"]
script = ExtResource("4_1iswr")

[node name="FirstComboStep" type="Node" parent="StateChart/ParallelState/InputEventLifeline"]
script = ExtResource("4_1iswr")

[node name="MemoryProtocol" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("2_7xljh")

[node name="RegionAssign" type="Node" parent="StateChart/ParallelState/MemoryProtocol"]
script = ExtResource("3_umojb")
initial_state = NodePath("Initial")

[node name="Initial" type="Node" parent="StateChart/ParallelState/MemoryProtocol/RegionAssign"]
script = ExtResource("4_1iswr")

[node name="assign_x" type="Node" parent="StateChart/ParallelState/MemoryProtocol/RegionAssign/Initial"]
script = ExtResource("5_ploh2")
to = NodePath("../../Assigned")
delay_in_seconds = "0.0"

[node name="Assigned" type="Node" parent="StateChart/ParallelState/MemoryProtocol/RegionAssign"]
script = ExtResource("4_1iswr")

[node name="MemoryProtocol" type="Node" parent="StateChart/ParallelState/MemoryProtocol"]
script = ExtResource("3_umojb")
initial_state = NodePath("Initial")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Initial" type="Node" parent="StateChart/ParallelState/MemoryProtocol/MemoryProtocol"]
script = ExtResource("4_1iswr")

[node name="Transition" type="Node" parent="StateChart/ParallelState/MemoryProtocol/MemoryProtocol/Initial"]
script = ExtResource("5_ploh2")
to = NodePath("../../SmallStep")
guard = SubResource("Resource_umojb")
delay_in_seconds = "0.0"

[node name="Transition2" type="Node" parent="StateChart/ParallelState/MemoryProtocol/MemoryProtocol/Initial"]
script = ExtResource("5_ploh2")
to = NodePath("../../BigStep")
guard = SubResource("Resource_1iswr")
delay_in_seconds = "0.0"

[node name="SmallStep" type="Node" parent="StateChart/ParallelState/MemoryProtocol/MemoryProtocol"]
script = ExtResource("4_1iswr")

[node name="BigStep" type="Node" parent="StateChart/ParallelState/MemoryProtocol/MemoryProtocol"]
script = ExtResource("4_1iswr")

[node name="Transition" type="Node" parent="StateChart/ParallelState/MemoryProtocol/MemoryProtocol/BigStep"]
script = ExtResource("5_ploh2")
to = NodePath("../../ComboStep")
guard = SubResource("Resource_7xljh")
delay_in_seconds = "0.0"

[node name="ComboStep" type="Node" parent="StateChart/ParallelState/MemoryProtocol/MemoryProtocol"]
script = ExtResource("4_1iswr")

[node name="Priority" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("3_umojb")
initial_state = NodePath("Composite")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Composite" type="Node" parent="StateChart/ParallelState/Priority"]
script = ExtResource("3_umojb")
initial_state = NodePath("Basic")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Basic" type="Node" parent="StateChart/ParallelState/Priority/Composite"]
script = ExtResource("4_1iswr")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="Transition" type="Node" parent="StateChart/ParallelState/Priority/Composite/Basic"]
script = ExtResource("5_ploh2")
to = NodePath("../../../SourceChild")
delay_in_seconds = "0.0"

[node name="Transition" type="Node" parent="StateChart/ParallelState/Priority/Composite"]
script = ExtResource("5_ploh2")
to = NodePath("../../SourceParent")
delay_in_seconds = "0.0"

[node name="SourceParent" type="Node" parent="StateChart/ParallelState/Priority"]
script = ExtResource("4_1iswr")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="SourceChild" type="Node" parent="StateChart/ParallelState/Priority"]
script = ExtResource("4_1iswr")

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="state_entered" from="StateChart/ParallelState/InputEventLifeline" to="." method="_on_input_event_lifeline_state_entered"]
[connection signal="taken" from="StateChart/ParallelState/MemoryProtocol/RegionAssign/Initial/assign_x" to="." method="_on_assign_x_taken"]
